force-app/main/default/objects/CustomizationLineItem__c/CustomizationLineItem__c.object-meta.xml
<CustomObject>
    <label>Customization Line Item</label>
    <nameField>
        <displayFormat>CLI-{0000}</displayFormat>
        <label>Customization Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customization Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>