force-app/main/default/objects/CustomizationLineItem__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardware or Software Purchase</fullName>
            </value>
            <value>
                <fullName>Current FTE/Contractor Need</fullName>
            </value>
            <value>
                <fullName>Incremental Headcount Need</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>