force-app/main/default/objects/CustomizationLineItem__c/fields/ProductCustomizationRequest__c.field-meta.xml
<CustomField>
    <fullName>ProductCustomizationRequest__c</fullName>
    <label>Product Customization Request</label>
    <referenceTo>ProductCustomizationRequest__c</referenceTo>
    <relationshipLabel>Customization Line Items</relationshipLabel>
    <relationshipName>Customization_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>