force-app/main/default/objects/CustomizationLineItem__c/fields/TotalCost__c.field-meta.xml
<CustomField>
    <fullName>TotalCost__c</fullName>
    <label>Total Cost During Course of Project</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>